src/objects/ensxapp__Log__c.object
<CustomObject>
    <fields>
        <fullName>ensxapp__Context_ID__c</fullName>
        <label>Context ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ensxapp__Execution_Time__c</fullName>
        <label>Execution Time (seconds)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ensxapp__LogLevel__c</fullName>
        <label>Log Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ensxapp__Request_Headers__c</fullName>
        <label>Request Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ensxapp__Request_URL__c</fullName>
        <label>Request URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ensxapp__Response_Headers__c</fullName>
        <label>Response Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ensxapp__SBO_Name__c</fullName>
        <label>SBO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ensxapp__Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ensxapp__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>enosiX Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>enosiX Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>